# dtcore

./: .gitignore  .gitignore_lib  404.html  CHANGELOG.md  README.md  dthelpers.cmake  index.html  sitemap.xml
.github/workflows/: ci.yml
apps_espidf/demo_basics/main/: main.c
apps_espidf/demo_hello/: CMakeLists.txt
apps_espidf/demo_hello/main/: CMakeLists.txt  main.c
apps_espidf/test_all/: CMakeLists.txt  sdkconfig.old
apps_espidf/test_all/main/: CMakeLists.txt  main.c
apps_linux/demo_basics/: CMakeLists.txt
apps_linux/demo_basics/src/: main.c
apps_linux/demo_hello/: CMakeLists.txt
apps_linux/demo_hello/src/: main.c
apps_linux/test_all/: CMakeLists.txt
apps_linux/test_all/src/: main.c
apps_pico/demo_basics/: CMakeLists.txt
apps_pico/demo_basics/src/: main.c
apps_pico/demo_hello/src/: main.c
apps_pico/test_all/: CMakeLists.txt
apps_pico/test_all/src/: main.c
apps_zephyr/demo_basics/: CMakeLists.txt
apps_zephyr/demo_basics/src/: main.c
apps_zephyr/demo_hello/: CMakeLists.txt
apps_zephyr/demo_hello/src/: main.c
apps_zephyr/test_all/: CMakeLists.txt  prj.conf
apps_zephyr/test_all/src/: main.c
demos/: demo_buffer.html  demo_error.html  demo_hello.html  demo_random.html  index.html  list.html
dtcore_demos/: CMakeLists.txt
dtcore_demos/include/dtcore_demos/: dtcore_demos.h
dtcore_demos/src/: demo_buffer.c  demo_error.c  demo_hello.c  demo_random.c
dtcore_library/: CMakeLists.txt
dtcore_library/include/dtcore/: dtarray_float.h  dtarray_int32.h  dtbuffer.h  dtbytes.h  dtchunker.h  dtcore.h  dtcore_constants.h  dtcore_constants.yaml  dtcore_helper.h  dtcore_version.h  dterr.h  dteventlogger.h  dtflipper.h  dtglyph.h  dtglyph_dos.h  dtguid.h  dtguidable.h  dtguidable_pool.h  dtheaper.h  dtkvp.h  dtlcg.h  dtledger.h  dtlog.h  dtobject.h  dtpackable.h  dtpackx.h  dtparse.h  dtpicosdk_helper.h  dtrandomizer.h  dtrandomizer_browngrav.h  dtrandomizer_uniform.h  dtraster.h  dtraster_rgb565.h  dtraster_rgba8888.h  dtrgb565.h  dtrgba8888.h  dtringfifo.h  dtrpc.h  dtrpc_registry.h  dtstr.h  (+6 more)
dtcore_library/src/: dtarray_float.c  dtarray_int32.c  dtbuffer.c  dtbytes.c  dtchunker.c  dterr.c  dteventlogger.c  dtflipper.c  dtglyph.c  dtglyph_dos.c  dtglyph_dos_table.h  dtguid.c  dtguidable.c  dtguidable_pool.c  dtheaper.c  dtkvp.c  dtlcg.c  dtledger.c  dtlog.c  dtobject.c  dtpackable.c  dtpackx.c  dtparse.c  dtpicosdk_helper.c  dtrandomizer.c  dtrandomizer_browngrav.c  dtrandomizer_uniform.c  dtraster.c  dtraster_draw.c  dtraster_rgb565.c  dtraster_rgba8888.c  dtringfifo.c  dtrpc.c  dtrpc_registry.c  dtstr.c  dttrap.c  dtunittest.c  dtvtable.c  dtwallclock.c
dtcore_tests/: CMakeLists.txt
dtcore_tests/include/: dtcore_tests.h
dtcore_tests/src/: test_dtarray_float.c  test_dtarray_int32.c  test_dtbuffer.c  test_dtchunker.c  test_dterr.c  test_dteventlogger.c  test_dtflipper.c  test_dtglpyh_dos.c  test_dtguid.c  test_dtguidable_pool.c  test_dtheaper.c  test_dtkvp.c  test_dtlog.c  test_dtpackx.c  test_dtrandomizer_browngrav.c  test_dtrandomizer_uniform.c  test_dtraster_rgb565.c  test_dtraster_rgba8888.c  test_dtrgb565.c  test_dtringfifo.c  test_dtrpc.c  test_dtrpc_registry.c  test_dtstr.c  test_dttrap.c  test_dtunittest.c  test_dtvtable.c  test_matching.c  test_most.c
function_groups/: dtarray_float.html  dtarray_int32.html  dtbuffer.html  dtbytes.html  dtchunker.html  dterr.html  dteventlogger.html  dtflipper.html  dtguid.html  dtguidable.html  dtheaper.html  dtkvp.html  dtlcg.html  dtledger.html  dtlog.html  dtobject.html  dtpackable.html  dtpackx.html  dtrandomizer.html  dtrandomizer_browngrav.html  dtrandomizer_uniform.html  dtringfifo.html  dtstr.html  dttrap.html  dtunittest.html  dtvtable.html  dtwallclock.html  index.html
functions/: index.html
guides/: constants.html  design_principles.html  errors.html  index.html  quick_start.html  repository_structure.html  running_apps.html  vtables.html
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/demos/: demo_buffer.md  demo_error.md  demo_hello.md  demo_random.md  index.md  list.md
mkdocs/docs/function_groups/: dtarray_float.md  dtarray_int32.md  dtbuffer.md  dtbytes.md  dtchunker.md  dterr.md  dteventlogger.md  dtflipper.md  dtguid.md  dtguidable.md  dtheaper.md  dtkvp.md  dtlcg.md  dtledger.md  dtlog.md  dtobject.md  dtpackable.md  dtpackx.md  dtrandomizer.md  dtrandomizer_browngrav.md  dtrandomizer_uniform.md  dtringfifo.md  dtstr.md  dttrap.md  dtunittest.md  dtvtable.md  dtwallclock.md  index.md
mkdocs/docs/guides/: constants.md  design_principles.md  errors.md  index.md  quick_start.md  repository_structure.md  running_apps.md  vtables.md
scripts/: ci_espidf.sh  ci_linux.sh  ci_zephyr.sh
search/: search_index.json
